--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
+    "use-throttle": "0.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
