creating database for backend

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-icons": "^4.4.0",
     "react-rating": "^2.0.5",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.2",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
@@ -52,5 +52,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "<html>\r   <h1>JioMart Website Clone</h1>\r   <h3>In the Masai School Construct week project ,We have cloned the Online Grocery- JioMart website. JioMart is an Indian ecommerce website, where user can choose \r   and buy online products such as Grocery, electronic , Fashion & Beauty products and much more. We built this clone website in 5 days with the team of 5 collaborators.\r   <br>\r   <br>Tech languanges:- HTML | CSS | JavaScript | React | Redux | ChakraUI</br>\r   <br>\r    <p> Some features of our Projects-</p>\r      1)Login/sign-up.\r     <br>2)Product Page & Product Detail page.\r     <br>3)Cart bag.\r     <br>4)Website Contact Section.\r     <br>5)User friendly easy and secure payment System.\r     <br>6)Return Policy if the user get damaged product.</p></h3>\r   <h3>Landing Page</h3>\r   <img src=\"https://user-images.githubusercontent.com/101391413/193449477-c7a6f4c3-4463-442c-b4fa-d406f10c1db1.jpeg\"/>\r       <hr>\r   <img src=\"https://user-images.githubusercontent.com/101391413/193449507-5caf25e8-770b-4076-af1b-46473fc4cc81.jpeg\"/>\r   <hr>\r   <img src=\"https://user-images.githubusercontent.com/101391413/193449625-bf974e64-4c53-4ab7-9f9c-a835d45ddf6a.jpeg\"/>\r     <hr>\r   <h3>Sign-up/login</h3>\r   <img src=\"https://user-images.githubusercontent.com/101391413/193449716-9895cda4-4a64-49f9-b0a8-c1b8728db7ee.jpeg\"/>\r   <img src=\"https://user-images.githubusercontent.com/101391413/193449991-4b84ba0f-01de-46ff-9b5a-72d2118af92c.png\"/>\r     <hr>\r   <h3>Groceries</h3>\r   <img src=\"https://user-images.githubusercontent.com/101391413/193450106-b886b1cb-f4ca-42f2-89b5-3029e8e140e4.jpeg\"/>\r     <hr>\r   <h3>Women's Page</h3>\r   <img src=\"https://user-images.githubusercontent.com/101391413/193450063-120468ab-62d2-46f7-b4f6-ee8d0a248f1b.jpeg\"/>\r   <img src=\"https://user-images.githubusercontent.com/101391413/193450229-2a7eb73a-c795-4528-8404-b15e15b75f27.jpeg\"/>\r     <hr>\r   <h3>Footer</h3>\r   <img src=\"https://user-images.githubusercontent.com/101391413/193450273-1152d788-093a-4322-81ca-3c250f35a233.jpeg\"/>\r     <hr>\r   <h3>Payment</h3>\r   <img src=\"https://user-images.githubusercontent.com/101391413/193450335-19880125-ba40-45d8-8445-2eef6cba04ff.jpeg\"/>\r     <hr>\r     <hr>\r   <h2>Team Members and Contributors</h2>",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tushar9546/prickly-partner-2503.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Tushar9546/prickly-partner-2503/issues"
+  },
+  "homepage": "https://github.com/Tushar9546/prickly-partner-2503#readme"
 }
